overflow with animation problem fixed

--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ body {
     width: 100%;
     height: 100vh;
     display: flexbox;
-    overflow: visible;
+    overflow: hidden;
 }
 
 .frase-bem-vindo {
